# multiClock.Adw4

./: README.md  meson.build  ua.inf.multiapps.multiClock.json  ua.multiapps.multiClock.json
data/: meson.build  ua.inf.multiapps.multiClock.appdata.xml.in  ua.inf.multiapps.multiClock.desktop.in  ua.inf.multiapps.multiClock.gschema.xml  ua.multiapps.multiClock.appdata.xml.in  ua.multiapps.multiClock.desktop.in  ua.multiapps.multiClock.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  multiclock.gresource.xml
src/services/appsload/: appsload_model.vala  appsload_provider.vala  appsload_service.vala
src/services/clock/: clock_model.vala  clock_provider.vala  clock_service.vala
src/services/connect/: connect_model.vala  connect_provider.vala  connect_service.vala
src/services/settings/: locale_model.vala  settings_model.vala  settings_service.vala  theme_model.vala
src/services/translate/: translate_model.vala  translate_provider.vala  translate_service.vala
src/utils/: info_linux.c  info_linux.vala
src/views/: horiz_big_view.vala  vert_big_view.vala
src/widgets/circular-progress-bar/: circular-progress-bar.vala
src/widgets/clock_widget/: clock_face.vala  clock_widget.vala
src/widgets/custom-menu-item/: custom-menu-item.ui  custom-menu-item.vala
src/widgets/theme_switcher/: theme_switcher.css  theme_switcher.vala
src/windows/language_window/: language_window.ui  language_window.vala
src/windows/main_window/: main_window.ui  main_window.vala
src/windows/no_connect_window/: no_connect_window.vala
src/windows/splash_window/: splash_window.vala
src/windows/towns_window/: towns_window.ui  towns_window.vala
